--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,13 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.106",
     "@types/react": "^18.3.4",
+    "@types/react-big-calendar": "^1.8.10",
     "@types/react-dom": "^18.3.0",
     "@types/styled-components": "^5.1.34",
     "axios": "^1.7.6",
+    "date-fns": "^3.6.0",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.13.4",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
     "react-scripts": "^5.0.1",
