--- a/client/package.json
+++ b/client/package.json
@@ -7,13 +7,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.106",
     "@types/react": "^18.3.4",
     "@types/react-big-calendar": "^1.8.10",
     "@types/react-dom": "^18.3.0",
     "@types/styled-components": "^5.1.34",
     "axios": "^1.7.6",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
+    "path-browserify": "^1.0.1",
     "react": "^18.3.1",
     "react-big-calendar": "^1.13.4",
     "react-dom": "^18.3.1",
@@ -46,5 +47,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/node": "^22.5.4",
+    "crypto-browserify": "^3.12.0",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.4"
   }
 }
