--- a/server/package.json
+++ b/server/package.json
@@ -1,9 +1,12 @@
 {
   "dependencies": {
+    "@types/winston": "^2.4.4",
     "axios": "^1.7.7",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "pg": "^8.12.0",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "winston": "^3.14.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
