--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@types/winston": "^2.4.4",
     "axios": "^1.7.7",
+    "csv-parse": "^5.5.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "pg": "^8.12.0",
@@ -11,7 +12,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^22.5.1",
-    "@types/pg": "^8.11.8",
+    "@types/pg": "^8.11.9",
     "ts-node": "^10.9.2"
   },
   "scripts": {
