--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,15 @@
 {
   "dependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/winston": "^2.4.4",
     "axios": "^1.7.7",
+    "cors": "^2.8.5",
     "csv-parse": "^5.5.6",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.12.0",
     "ts-node-dev": "^2.0.0",
     "winston": "^3.14.2"
