--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
+    "@google-cloud/storage": "^7.13.0",
     "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/multer": "^1.4.12",
+    "@types/uuid": "^10.0.0",
     "@types/winston": "^2.4.4",
     "axios": "^1.7.7",
     "cors": "^2.8.5",
@@ -10,8 +13,10 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.12.0",
     "ts-node-dev": "^2.0.0",
+    "uuid": "^10.0.0",
     "winston": "^3.14.2"
   },
   "devDependencies": {
