--- a/client/.gitignore
+++ b/client/.gitignore
@@ -11,9 +11,6 @@
 # production
 /build
 
-#환경변수
-.env
-
 # misc
 .DS_Store
 .env.local
@@ -24,3 +21,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+/keys
+.env
