--- a/client/package.json
+++ b/client/package.json
@@ -7,20 +7,15 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/react": "^18.3.4",
-    "@types/react-big-calendar": "^1.8.10",
+    "@types/node": "^16.18.112",
+    "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
-    "@types/styled-components": "^5.1.34",
-    "axios": "^1.7.6",
-    "date-fns": "^3.6.0",
-    "dotenv": "^16.4.5",
-    "path-browserify": "^1.0.1",
+    "axios": "^1.7.7",
     "react": "^18.3.1",
-    "react-big-calendar": "^1.13.4",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.1",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.1",
-    "styled-components": "^6.1.13",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -47,14 +42,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/node": "^22.5.4",
-    "crypto-browserify": "^3.12.0",
-    "https-browserify": "^1.0.0",
-    "os-browserify": "^0.3.0",
-    "stream-browserify": "^3.0.0",
-    "stream-http": "^3.2.0",
-    "url": "^0.11.4"
   }
 }
