--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.1",
