--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "draft-js": "^0.11.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-icons": "^5.3.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.26.2",
@@ -47,6 +48,7 @@
     ]
   },
   "devDependencies": {
-    "@types/draft-js": "^0.11.18"
+    "@types/draft-js": "^0.11.18",
+    "@types/react-draft-wysiwyg": "^1.13.8"
   }
 }
