--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "@types/winston": "^2.4.4",
     "axios": "^1.7.7",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "csv-parse": "^5.5.6",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
