--- a/server/package.json
+++ b/server/package.json
@@ -2,8 +2,10 @@
   "dependencies": {
     "@google-cloud/storage": "^7.13.0",
     "@types/cors": "^2.8.17",
+    "@types/draft-js": "^0.11.18",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/multer": "^1.4.12",
+    "@types/react-draft-wysiwyg": "^1.13.8",
     "@types/uuid": "^10.0.0",
     "@types/winston": "^2.4.4",
     "axios": "^1.7.7",
@@ -12,11 +14,13 @@
     "csv-parse": "^5.5.6",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
+    "draft-js": "^0.11.7",
     "express": "^4.19.2",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.12.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "ts-node-dev": "^2.0.0",
     "uuid": "^10.0.0",
     "winston": "^3.14.2"
