--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.112",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
+    "@types/react-helmet": "^6.1.11",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
     "draft-convert": "^2.1.13",
@@ -19,6 +20,7 @@
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-draft-wysiwyg": "^1.15.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^5.3.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.26.2",
