--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@google-cloud/storage": "^7.13.0",
+    "@types/axios": "^0.14.4",
     "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/multer": "^1.4.12",
@@ -19,7 +20,7 @@
     "pg": "^8.12.0",
     "ts-node-dev": "^2.0.0",
     "uuid": "^10.0.0",
-    "winston": "^3.14.2"
+    "winston": "^3.15.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
