--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,8 @@
     "date-fns": "^4.1.0",
     "draft-convert": "^2.1.13",
     "draft-js": "^0.11.7",
+    "draft-js-export-html": "^1.4.1",
+    "draft-js-import-html": "^1.4.1",
     "draft-js-plugins-editor": "^3.0.0",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
